<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.digitalsolutions.finalproject.GetMovieActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:id="@+id/searchLinearLayout">

        <EditText
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:id="@+id/txtSearchMovie"
            android:hint="@string/txtSearchHint"
            android:layout_width="wrap_content" />

        <Button
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/btnSearchMovie"
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content" />
    </LinearLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchTableLayout"
        android:layout_below="@+id/searchLinearLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="left">

            <ImageView
                android:id="@+id/imgNewCover"
                android:layout_height="150dp"
                android:layout_width="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_gravity="left"
                android:src="@drawable/fillerimg"
                android:visibility="invisible"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtNewTitle"
                android:layout_width="wrap_content"
                android:paddingTop="5dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textSize="32sp"
                android:text="the title"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtNewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/txtDescription"
                android:paddingTop="5dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:visibility="invisible"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtNewUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textSize="25sp"
                android:clickable="true"
                android:text="http://something.com"
                android:visibility="invisible"/>
        </TableRow>
    </TableLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaveMovie"
        android:layout_below="@+id/searchTableLayout"
        android:text="@string/btnSaveMovie"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:visibility="invisible"/>
</RelativeLayout>
